<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/events"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/string_events" />
    <item
        android:id="@+id/myevents"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/string_my_events" />
    <item
        android:id="@+id/view_gallery"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/string_gallery" />
    <item
        android:id="@+id/nav_account"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_activity_account" />

    <item
        android:id="@+id/nav_signout"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/string_login_out" />
</menu>
