<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- TODO change tools:context to right activity!-->
    <EditText
        android:id="@+id/member_search_id_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_username"
        android:inputType="textPersonName"

        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="64dp" />

    <Button
        android:id="@+id/member_search_id_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="49dp"
        android:layout_marginStart="49dp"
        android:text="@string/string_add"

        app:layout_constraintLeft_toRightOf="@+id/member_search_id_textfield"

        tools:layout_editor_absoluteY="64dp" />

    <ListView
        android:id="@+id/user_added_id_listview"
        android:layout_width="364dp"
        android:layout_height="374dp"

        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="121dp" />

    <Button
        android:id="@+id/search_user_id_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="49dp"
        android:text="@string/string_search"

        app:layout_constraintLeft_toRightOf="@+id/member_search_id_textfield"

        tools:layout_editor_absoluteY="16dp" />

</android.support.constraint.ConstraintLayout>